--- a/Prak Mg7/index2.html
+++ b/Prak Mg7/index2.html
@@ -13,13 +13,13 @@
         <li >
             <a href="home.html">Home</a></li>
         <li >
-            <a href="index.html">Guild Member List</a></li>
+            <a href="index.html">Guild Registration</a></li>
         <li class="active">
-            <a href="index2.html">Guild Registration</a></li>
+            <a href="index2.html">Guild Member List</a></li>
         <li style="float:right">
             <a>Fairy Tail Guild</a></li>
     </ul>
-	<h1>Registration</h1>
+	<h1>Member List</h1>
 
 	<div>
 	<br>
@@ -36,10 +36,10 @@
 					Level
 				</th>
 				<th width="200px">
-					Elemen
+					Job
 				</th>
 				<th width="150px">
-					Job
+					Guild Rank
 				</th>
 				<th width="150px">
 					
