--- a/Prak Mg7/home.html
+++ b/Prak Mg7/home.html
@@ -9,9 +9,9 @@
         <li class="active">
             <a href="home.html">Home</a></li>
         <li>
-            <a href="index.html"> Guild Member List</a></li>
+            <a href="index.html"> Guild Registration</a></li>
         <li>
-            <a href="index2.html">Guild Registration</a></li>
+            <a href="index2.html">Guild Member List</a></li>
         <li style="float:right">
         <a>Fairy Tail Guild</a></li>
     </ul>
