--- a/Prak Mg7/home.html
+++ b/Prak Mg7/home.html
@@ -16,7 +16,7 @@
         <a>Fairy Tail Guild</a></li>
     </ul>
 
-    <center><img src="Fairy_Tail_Banner.png" style="width:680px; height:383px;" alt="Gambar Loading Screen Konosuba"></center>
+    <center><img src="Fairy_Tail_Banner.png" style="width:680px; height:383px;"></center>
     <fieldset>
         <center>
             <h1>About Fairy Tail</h1>
